--- a/src/BlazorDatasheet.SharedPages/Pages/Index.razor
+++ b/src/BlazorDatasheet.SharedPages/Pages/Index.razor
@@ -6,11 +6,7 @@
 @using BlazorDatasheet.Render
 @using BlazorDatasheet.SharedPages.Data
 
-<PageTitle>Index</PageTitle>
-
-<p>
-    Blazor DataSheet is an excel-like editor for cellular values. Below shows some of the features of the data sheet. Sample code is available on <a href="https://github.com/anmcgrath/BlazorDatasheet">GitHub</a>
-</p>
+<PageTitle>Random Group</PageTitle>
 
 <Datasheet Theme="@Theme"
            Sheet="Sheet"
