fix: in process

--- a/src/BlazorDatasheet.SharedPages/Pages/Index.razor
+++ b/src/BlazorDatasheet.SharedPages/Pages/Index.razor
@@ -154,6 +154,7 @@
             _editor!.Sheet.InsertColAfter(_editor!.Sheet.NumCols - 1);
             _editor!.Sheet.ColumnHeadings[_editor!.Sheet.ColumnHeadings.Count - 1].Header = Define.Result;
         }
+        MakeRandom.GetResult(SampleRawInfo.Data);
     }
 
     private void AddColumn()
