--- a/src/BlazorDatasheet.Server/Shared/MainLayout.razor
+++ b/src/BlazorDatasheet.Server/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>BlazorDatasheet.Server</PageTitle>
+<PageTitle>Random Group</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/sjw1980/randomgroup/" target="_blank">Under MIT License</a>
         </div>
 
         <article class="content px-4">
